Autocomplete and substring matching implemented

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MapBuilderUi</title>
+  <title>Partner Restaurant</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://bootswatch.com/4/simplex/bootstrap.min.css">
+  <link rel="icon" type="image/x-icon" href="https://media.licdn.com/media-proxy/ext?w=800&h=800&hash=ZMSSLPh7bgNqsK3w4fwftwafr38%3D&ora=1%2CaFBCTXdkRmpGL2lvQUFBPQ%2CxAVta9Er0Vinkhwfjw8177yE41y87UNCVordEGXyD3u0qYrdfyO6cMXWKLKnuVUVfX0clFY1KvKgE2PjD5G1It7sfol03cHtJY27dA4BYBI3iSdF_NQ8">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
-  <app-map></app-map>
 </body>
 </html>
