Basic Search Implemented

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Partner Restaurant</title>
+  <title>Map Builder</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,5 +14,6 @@
 </head>
 <body>
   <app-root></app-root>
+  
 </body>
 </html>
